--- a/assets/interface/style.css
+++ b/assets/interface/style.css
@@ -17,6 +17,66 @@ body {
     flex-direction: row;
 }
 
+.dialog-overlay {
+    display: none;
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.dialog {
+    display: none;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(30, 30, 30);
+    ;
+    z-index: 2;
+    color: white;
+    gap: 10px;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 1px grey solid;
+    width: 400px;
+    height: 150px;
+}
+
+.dialog input {
+    background-color: rgb(30, 30, 30);
+    ;
+    color: white;
+    border: 1px solid;
+    min-height: 30px;
+}
+
+.dialog-buttons {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.dialog-buttons button {
+    background-color: rgb(30, 30, 30);
+    border: none;
+    color: white;
+    width: 100px;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.dialog-buttons button:hover {
+    background-color: rgb(45, 45, 45);
+}
+
 #menu_bar {
     position: fixed;
     display: flex;
@@ -65,6 +125,34 @@ body {
     border-bottom: 1px gray solid;
 }
 
+#search-line {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    gap: 10px;
+    border: none;
+}
+
+#search-line button {
+    min-width: 100px;
+    min-height: 25px;
+    background-color: rgb(45, 45, 45);
+    color: white;
+    border: 2px gray solid;
+}
+
+#search-line button:hover {
+    background-color: rgb(60, 60, 60);
+}
+
+
+#search-line input {
+    flex-grow: 1;
+    background-color: rgb(45, 45, 45);
+    color: white;
+    border: 2px gray solid;
+}
+
 .list {
     margin: 20px;
     color: white;
@@ -77,13 +165,16 @@ body {
         flex-direction: row;
         border: 2px gray solid;
         padding: 10px;
-        margin: 10px;
+        margin: 10px; 
     }
 
     .list-item span {
         margin: 10px;
         text-align: left;
-        flex-grow: 1;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        min-width: 30%;
+        max-width: 30%;
     }
 
     .list-item span:first-child {
@@ -182,4 +273,3 @@ span.text+span.text-placeholder {
 span.text:empty+span.text-placeholder {
     display: flex;
 }
-
