--- a/assets/interface/style.css
+++ b/assets/interface/style.css
@@ -115,7 +115,7 @@ button:hover {
 .main-area {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: calc(100vw - 50px);
     margin-left: 50px;
 }
 
@@ -174,6 +174,23 @@ button:hover {
         text-overflow: ellipsis;
         min-width: 30%;
         max-width: 30%;
+    }
+
+    .list-item div {
+        display: flex;
+        overflow: hidden;
+    }
+
+    .list-item div span {
+        color: white;
+        border: 1px white solid;
+        border-radius: 30px;
+        min-width: fit-content;
+        max-width: fit-content;
+        padding: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
+        text-overflow: initial;
     }
 
     .list-item span:first-child {
