--- a/assets/interface/style.css
+++ b/assets/interface/style.css
@@ -174,6 +174,8 @@ button:hover {
         text-overflow: ellipsis;
         min-width: 30%;
         max-width: 30%;
+        display: flex;
+        align-items: center;
     }
 
     .list-item div {
@@ -280,6 +282,27 @@ button:hover {
     padding: 5px;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.tags-list div {
+    display: flex;
+    gap: 5px;
+}
+
+.tags-list div button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: rgb(30, 30, 30);
+    padding-bottom: 2px;
+}
+
+.tags-list div button:hover {
+    background-color: rgb(60, 60, 60);
 }
 
 .with-text-placeholder+span.text-placeholder {
