--- a/assets/interface/style.css
+++ b/assets/interface/style.css
@@ -72,7 +72,7 @@ button:hover {
 }
 
 .dialog select {
-    background-color:  rgb(30, 30, 30);
+    background-color: rgb(30, 30, 30);
     color: white;
     border: 1px solid gray;
     min-height: 30px;
@@ -94,6 +94,10 @@ button:hover {
 
 .dialog-buttons button:hover {
     background-color: rgb(60, 60, 60);
+}
+
+.hidden {
+    display: none;
 }
 
 #menu_bar {
@@ -220,6 +224,12 @@ button:hover {
 
     .list-item:hover {
         background-color: rgb(90, 90, 90);
+    }
+
+    .list-item:hover {
+        .hidden {
+            display: block;
+        }
     }
 
     .list-item.dragging {
